--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -12,16 +12,6 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :address_id %>
-    <%= form.text_field :address_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :iban %>
-    <%= form.text_field :iban %>
-  </div>
-
-  <div class="field">
     <%= form.label :username %>
     <%= form.text_field :username %>
   </div>
@@ -29,6 +19,21 @@
   <div class="field">
     <%= form.label :password %>
     <%= form.text_field :password %>
+  </div>
+
+  <div class="field">
+    <%= form.label :email %>
+    <%= form.text_field :email %>
+  </div>
+
+  <div class="field">
+    <%= form.label :address_id %>
+    <%= form.text_field :address_id %>
+  </div>
+
+  <div class="field">
+    <%= form.label :iban %>
+    <%= form.text_field :iban %>
   </div>
 
   <div class="field">
