--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -5,10 +5,11 @@
 <table>
   <thead>
     <tr>
-      <th>Address</th>
-      <th>Iban</th>
       <th>Username</th>
       <th>Password</th>
+      <th>Email</th>
+      <th>Address</th>
+      <th>Iban</th>
       <th>Accountable</th>
       <th colspan="3"></th>
     </tr>
@@ -17,10 +18,11 @@
   <tbody>
     <% @accounts.each do |account| %>
       <tr>
-        <td><%= account.address %></td>
-        <td><%= account.iban %></td>
         <td><%= account.username %></td>
         <td><%= account.password %></td>
+        <td><%= account.email %></td>
+        <td><%= account.address %></td>
+        <td><%= account.iban %></td>
         <td><%= account.accountable %></td>
         <td><%= link_to 'Show', account %></td>
         <td><%= link_to 'Edit', edit_account_path(account) %></td>
