--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,16 +1,6 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Address:</strong>
-  <%= @account.address %>
-</p>
-
-<p>
-  <strong>Iban:</strong>
-  <%= @account.iban %>
-</p>
-
-<p>
   <strong>Username:</strong>
   <%= @account.username %>
 </p>
@@ -18,6 +8,21 @@
 <p>
   <strong>Password:</strong>
   <%= @account.password %>
+</p>
+
+<p>
+  <strong>Email:</strong>
+  <%= @account.email %>
+</p>
+
+<p>
+  <strong>Address:</strong>
+  <%= @account.address %>
+</p>
+
+<p>
+  <strong>Iban:</strong>
+  <%= @account.iban %>
 </p>
 
 <p>
